# greenwood-mapping

./: .gitignore  LICENSE  README.md
greenwood_history_store/: .dockerignore  .gitignore  README.md  makefile  manage.py  pyproject.toml
greenwood_history_store/.devcontainer/: .env  Dockerfile  devcontainer.json  docker-compose.yaml
greenwood_history_store/data/: businesstrr.csv  residents.csv
greenwood_history_store/greenwood_history/: asgi.py  urls.py  wsgi.py
greenwood_history_store/greenwood_history/apps/addresses/: admin.py  models.py  serializers.py  views.py
greenwood_history_store/greenwood_history/apps/addresses/migrations/: 0001_initial.py  0002_alter_address_number_additional.py  0002_alter_address_number_alter_street_type.py
greenwood_history_store/greenwood_history/apps/addresses/tests/: test_models.py
greenwood_history_store/greenwood_history/apps/buildings/: admin.py  apps.py  models.py
greenwood_history_store/greenwood_history/apps/buildings/migrations/: 0001_initial.py  0002_remove_building_floors_remove_building_style_and_more.py  0003_remove_building_number_remove_building_street_and_more.py
greenwood_history_store/greenwood_history/apps/entities/: admin.py  models.py  serializers.py  views.py
greenwood_history_store/greenwood_history/apps/entities/management/commands/: import_data.py
greenwood_history_store/greenwood_history/apps/entities/migrations/: 0001_initial.py  0002_alter_entity_meta.py  0002_entityevent_entity_protect_deletes_and_more.py  0003_delete_event_alter_entity_options_and_more.py  0003_entity_canonical_person_name_parsed.py  0004_businessevent_personevent_and_more.py  0005_remove_business_snapshot_insert_and_more.py
greenwood_history_store/greenwood_history/apps/people/: models.py
greenwood_history_store/greenwood_history/apps/plots/: apps.py  models.py
greenwood_history_store/greenwood_history/apps/shapes/: admin.py  apps.py  models.py
greenwood_history_store/greenwood_history/config/: __init__.py  common.py  dev.py  prod.py  test.py  values.py
greenwood_history_store/notebooks/: const.py  django_initializer.py  example.ipynb  import_test.ipynb  polk_import.ipynb  test.ipynb
map_mvp/src/: index.html
